<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/color_ecfdff"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingTop="24dp"
            android:paddingEnd="15dp"
            android:paddingBottom="24dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/btn_new"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:drawableTop="@mipmap/icon_new"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:scaleType="center"
                    android:text="@string/txt_new"
                    android:textColor="#333333"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/btn_share"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:drawableTop="@mipmap/icon_share"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:scaleType="center"
                    android:text="@string/txt_share"
                    android:textColor="#333333"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/btn_copy"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:drawableTop="@mipmap/icon_copy"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:scaleType="center"
                    android:text="@string/txt_copy"
                    android:textColor="#333333"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/btn_rate_us"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/shape_ffffff_r8"
                android:drawableEnd="@mipmap/icon_arrow_right"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="12dp"
                android:scaleType="center"
                android:text="@string/rate_us"
                android:textColor="#333333"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/btn_privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/shape_ffffff_r8"
                android:drawableEnd="@mipmap/icon_arrow_right"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="12dp"
                android:scaleType="center"
                android:text="@string/privacy_policy"
                android:textColor="#333333"
                android:textSize="14sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>